[gd_scene load_steps=10 format=2]

[ext_resource path="res://Weapons/AK47.gd" type="Script" id=1]
[ext_resource path="res://Assets/CharacterSprite/ak47.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sound_Effect/Rifle_Single_Shot.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/weapons/muzzle flash.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 100, 79 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 100, 79 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 79, 100, 79 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 100, 79, 100, 79 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "flash",
"speed": 10.0
} ]

[node name="AK47" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="muzzle_flash" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -1.3, -14 )
rotation = 4.71239
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 5 )
animation = "flash"

[node name="end_of_gun" type="Position2D" parent="."]
position = Vector2( -1, -16 )

[node name="Reload" type="Timer" parent="."]

[node name="ROF" type="Timer" parent="."]
wait_time = 0.1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="muzzleFlash" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
[connection signal="timeout" from="ROF" to="." method="_on_ROF_timeout"]
[connection signal="timeout" from="muzzleFlash" to="." method="_on_muzzleFlash_timeout"]
